--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -42,6 +42,7 @@ en:
       currency_name:
         cny: CNY
         btc: BTC
+        frc: FRC
       deposit_cny:
         title: Chinese Yuan Deposit
         desc: "To deposit via Bank transfer, please follow these steps:"
@@ -65,7 +66,8 @@ en:
 
       deposit_btc:
         title: BTC Deposit
-
+      deposit_FRC:
+        title: FRC Deposit
       deposit_coin:
         address: Address
         new_address: New Address
@@ -114,6 +116,8 @@ en:
 
       withdraw_btc:
         title: BTC Withdraw
+      withdraw_frc:
+        title: FRC Withdraw
 
       withdraw_coin:
         intro: Please fill in the address and amount, then submit the form. It will be confirmed in 10 minutes
@@ -169,4 +173,6 @@ en:
         all: All Market
         cny: CNY Market
         btc: BTC Market
+        frc: FRC Market
+
 
