--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -296,11 +296,17 @@ en:
       doge: DOGE
       pts: PTS
       ltc: LTC
+      frc: FRC
   currency:
     satoshi:
       key: BTC
       code: BTC
       name: Bitcoin
+      format: '0,0.0000'
+    freicoin:
+      key: FRC
+      code: FRC
+      name: Freicoin
       format: '0,0.0000'
     bitsharesx:
       key: BTS
@@ -670,11 +676,14 @@ en:
         liability-proof: Proof of Liabilities
         btc-assets: BTC Assets
         cny-assets: CNY Assets
+        frc-assets: FRC Assets
       liability_tabs:
         verify-btc: Verify My BTC Assets
         verify-cny: Verify My CNY Assets
+        verify-FRC: Verify My FRC Assets
         btc-assets-total: 'Total BTC assets of exchange: '
         cny-assets-total: 'Total CNY assets of exchange: '
+        frc-assets-total: 'Total FRC assets of exchange: '
       liability_proof:
         title: Proof of Liabilities
         intro: As an exchange, our liabilities refer to the sum of money (in both
@@ -696,6 +705,11 @@ en:
         intro: All of exchange's BTC assets are listed here.
         total: Total BTC Assets
         address: Address
+      frc_assets:
+        title: FRC Assets
+        intro: All of exchange's FRC assets are listed here.
+        total: Total FRC Assets
+        address: Address
       cny_assets:
         title: CNY Assets
         intro: All of exchange's CNY assets are listed here.
@@ -710,6 +724,7 @@ en:
         account_history: Account History
         cny_format: '0.00'
         btc_format: '0.00000000'
+        frc_format: '0.00000000'
         reason:
           cny:
             strike_add: Plus
@@ -718,6 +733,12 @@ en:
             withdraw: Withdraw
             fix: Fix
           btc:
+            strike_add: Plus
+            strike_sub: Sub
+            deposit: Deposit
+            withdraw: Withdraw
+            fix: Fix
+          frc:
             strike_add: Plus
             strike_sub: Sub
             deposit: Deposit
@@ -766,6 +787,7 @@ en:
         all_html: "<i class='fa fa-check'></i><span>All Markets</span>"
         cny_html: "<i class='fa fa-check'></i><span>CNY Markets</span>"
         btc_html: "<i class='fa fa-check'></i><span>BTC Markets</span>"
+        frc_html: "<i class='fa fa-check'></i><span>FRC Markets</span>"
         price: Price
         change: "24h %"
       range_switch:
@@ -957,6 +979,7 @@ en:
         title: "%{icon} %{c} Account"
         cny_format: '0.00'
         btc_format: '0.00000000'
+        frc_format: '0.00000000'
         total: Total
   guides:
     private:
@@ -1350,6 +1373,7 @@ en:
     currency:
       cny: CNY
       btc: BTC
+      frc: FRC
     order:
       state:
         done: DONE
