Changed Exchange name

--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -1722,7 +1722,7 @@ en:
     application:
       close: Close
     meta:
-      page_title: Peatio - The Opensource Cryptocurrency Exchange
+      page_title: Sicanet - The Opensource Cryptocurrency Exchange
       page_description: Peatio - The Opensource Cryptocurrency Exchange
       page_keywords: Peatio,Opensource,Exchange,Cryptocurrency
   members:
